# gnina_tensorflow

./: CMakeLists.txt  LICENSE  README.md  autoencoder.py  gnina_autoencoder.py  gnina_embeddings.proto  gnina_embeddings_pb2.py  gnina_functions.py  gnina_tensorflow.py  inference.py  model_definitions.py  pytest.ini  random_forest.py  requirements.txt  setup.py
adversarial_autoencoder/: adversarial_autoencoder_definitions.py
autoencoder/: autoencoder.py  autoencoder_definitions.py  calculate_embeddings.py  calculate_encodings.py  gnina_autoencoder.py  parse_command_line_args.py  reorder_types_file.py  schedules.py  train.py
classifier/: gnina_tensorflow.py  inference.py  model_definitions.py  random_forest.py
cpp/: CMakeLists.txt
cpp/include/: calculate_distances.h
cpp/lib/pybind11/: Makefile  cmake_install.cmake
cpp/src/calculate_distances/: bindings.cpp  calculate_distances.cpp
cpp/src/gnina_tensorflow_cpp/: bindings.cpp  calculate_distances.cpp
data/: gnina_max.ligmap  gnina_max.recmap  small_chembl_test.types
data/small_chembl_test/ligands/: mol102_4.gninatypes  mol111_6.gninatypes  mol1137_3.gninatypes  mol1168_8.gninatypes  mol1186_3.gninatypes  mol1188_6.gninatypes  mol1243_7.gninatypes  mol1250_0.gninatypes  mol1271_5.gninatypes  mol1314_6.gninatypes  mol1330_6.gninatypes  mol1342_8.gninatypes  mol1346_6.gninatypes  mol1419_8.gninatypes  mol1501_8.gninatypes  mol1545_8.gninatypes  mol1581_6.gninatypes  mol1633_4.gninatypes  mol1644_5.gninatypes  mol1666_0.gninatypes  mol1677_8.gninatypes  mol1721_4.gninatypes  mol1744_1.gninatypes  mol1783_4.gninatypes  mol1785_5.gninatypes  mol1796_7.gninatypes  mol1842_8.gninatypes  mol186_2.gninatypes  mol1932_3.gninatypes  mol1941_3.gninatypes  mol1965_0.gninatypes  mol1978_5.gninatypes  mol197_0.gninatypes  mol1_7.gninatypes  mol2025_5.gninatypes  mol2034_7.gninatypes  mol2050_3.gninatypes  mol2143_0.gninatypes  mol2183_1.gninatypes  mol2232_3.gninatypes  (+258 more)
data/small_chembl_test/ligands/10378_actives/: mol0_6.gninatypes  mol0_7.gninatypes  mol12_0.gninatypes  (+98 more)
data/small_chembl_test/receptors/: 10378_receptor.gninatypes  10498_receptor.gninatypes  10752_receptor.gninatypes  11279_receptor.gninatypes  11359_receptor.gninatypes  11534_receptor.gninatypes  11631_receptor.gninatypes  12670_receptor.gninatypes  12968_receptor.gninatypes  18061_receptor.gninatypes  20014_receptor.gninatypes  219_receptor.gninatypes  276_receptor.gninatypes  28_receptor.gninatypes
layers/: dense.py  dense_callable.py  inverse_convolution.py  layer_functions.py  layers.py  residual.py
python/: autoencoder.py  dense_autoencoder.py  gnina_embeddings_pb2.py  gnina_functions.py  inference.py  model_definitions.py  random_forest.py  visualise.py
test/: test_calculate_encodings.py  test_gnina_tensorflow.py
test/models/test_autoencoder/: saved_model.pb
test/resources/: gnina35.ligmap  gnina35.recmap
utilities/: ae_reconstruction_analysis.py  gnina_functions.py  lr_range_check.py  lr_range_test.py  mem_usage.py  monitor_slurm.py  plot_ae.py  plot_mem_profile.py  reorder_types_file.py
(+8324 files in other folders)
